# III_term

./: .gitignore  CMakeLists.txt  answer.md  task_2.cpp  task_3.cpp
homework_1/: answer.md  task_1.cpp  task_2.cpp  task_4.cpp
homework_10/: CMakeLists.txt  answer.md  task_1.cpp  task_2.cpp  task_3_var_1.cpp  task_3_var_2.cpp
homework_11/: answer.md
homework_2/: CMakeLists.txt  answer.md  main.cpp  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
homework_3/: CMakeLists.txt  answer.md  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
homework_4/: CMakeLists.txt  answer.md  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
homework_5/: CMakeLists.txt  answer.md  lec_9_10_21.cpp  task_2.cpp  task_2_Vector.cpp  task_2_Vector.h  task_3.cpp  task_3_physics.cpp  task_3_physics.h  task_4.cpp  task_4_2.cpp  task_4_error_1.cpp  task_4_error_1.h  task_4_error_2.cpp  task_4_error_2.h
homework_6/: CMakeLists.txt  answer.md  task_1.cpp  task_1.h  task_1_main.cpp  task_2_fraction.cpp  task_2_operation.cpp  task_2_operation.h
homework_7/: CMakeLists.txt  Shapes.h  answer.md  main.cpp
homework_7/shape/: Ellipse.cpp  Ellipse.h  Polygon.cpp  Polygon.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h
homework_8/: CMakeLists.txt  answer.md  date.cpp  date.h  task_2_date.cpp  task_2_operation.h  task_4.cpp
homework_9/: CMakeLists.txt  Vector.cpp  answer.md  task_1.cpp  task_2.cpp  task_2.h
lection/: classwork.md  lection_2_10_21.md  lection_9_10_21.md
